--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "6.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
