--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ pids
 *.pid.lock
 
 # prisma
-prisma/generated/*
+prisma/generated
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
